# sensor_calib

./: .gitignore  README.md  build.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/find_camera_pose/: find_camera_pose
devel/lib/lidar_camera_calib/: lidar_camera_calib
devel/lib/pkgconfig/: camera_camera_calib.pc  find_camera_pose.pc  lidar_camera_calib.pc
devel/share/camera_camera_calib/cmake/: camera_camera_calibConfig.cmake
devel/share/find_camera_pose/cmake/: find_camera_poseConfig.cmake
devel/share/lidar_camera_calib/cmake/: lidar_camera_calibConfig.cmake
src/camera_camera_calib/: CMakeLists.txt  package.xml
src/camera_camera_calib/include/camera_camera_calib/: aprilTagsDetector.h  loadBag.h  loadSettings.h  objectPose.h  ocamCalibModel.h  omniModel.h  optimizer.h  optimizerRay.h
src/camera_camera_calib/settings/: settings.xml
src/camera_camera_calib/src/: aprilTagsDetector.cpp  calibrate.cpp  loadBag.cpp  objectPose.cpp  ocamCalibModel.cpp  omniModel.cpp  optimizer.cpp  optimizerRay.cpp  testOmniReprojection.cpp  testReprojection.cpp
src/camera_camera_calib/test/: testCalibrate.cpp  testCalibrateRay.cpp  testOcamReprojection.cpp  testOmniReprojection.cpp  testVisulization.cpp
src/find_camera_pose/: CMakeLists.txt
src/find_camera_pose/include/: settings.xml  settings.xml~
src/find_camera_pose/include/find_camera_pose/: fisheyeModel.h  loadBagFile.h~  loadSettings.h  optimizer.h
src/find_camera_pose/src/: fisheyeModel.cpp  loadBagFile.cpp~  main.cpp  objectPose.cpp
src/find_camera_pose/src/opencvFishEye/: fisheye.cpp  fisheye.hpp  precomp.hpp
src/lidar_camera_calib/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/lidar_camera_calib/include/: settings.xml
src/lidar_camera_calib/include/find_camera_pose/: loadBagFile.h  loadSettings.h  omniModel.h
src/lidar_camera_calib/include/lidar_camera_calib/: hash.h  loadBag.h  objectPose.h  omniModel.h  optimizer.h  visualization.h
src/lidar_camera_calib/src/: findTransform.cpp  loadBag.cpp  loadBagFile.cpp  main.cpp  main.cpp~  objectPose.cpp  omniModel.cpp  optimizer.cpp  visualization.cpp
